--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,10 @@ header {
 	width: 480px;
 	margin: 0 auto;
 }
+pre {
+	border: solid 1px #ccc;
+	padding: 5px 10px;
+}
 .imagefill-icon img { 
 	padding: 8px; 
 	border: solid 4px #ccc;
@@ -63,6 +67,21 @@ header {
 @media (max-width: 480px) {
 	.responsive-demo .image-square { height: 120px; }
 }
+
+/* packery demo - via http://codepen.io/desandro/pen/nfkth */
+.packery { margin: 0 auto; }
+.gutter-sizer { width: 2%; }
+.grid-sizer { width: 18.4%; }
+.item {
+  width: 150px;
+  height: 60px;
+  float: left;
+  background: #C09;
+  border: 4px solid #333;
+  border-color: hsla(0, 0%, 0%, 0.3);
+}
+.item.w2 { width: 320px; background: #9C0; }
+.item.h2 { height: 120px; background: #0C9; }
 
 
 /* Helpers */
